--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "8.11.1"
   },
   "dependencies": {
-    "discord.io": "github:Woor/discord.io#gateway_v6",
+    "@ffmpeg-installer/ffmpeg": "^1.0.13",
+    "discord.io": "github:woor/discord.io#gateway_v6",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "npm": "^5.8.0",
