--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.13",
     "discord.io": "github:woor/discord.io#gateway_v6",
+    "file-system": "^2.2.2",
     "fluent-ffmpeg": "^2.1.2",
-    "fs": "0.0.1-security",
     "heroku": "^0.2.0",
     "npm": "^5.8.0",
     "stream": "0.0.2",
